  - Fix faulty namespace names that caused 500 on user creation
  - Option to disable standard login
  - Clean old created archives from repository downloads directory
  - Fix download link for huge MR diffs
  - Expose event and mergerequest timestamps in API
  - Fix emails on push service when only one commit is pushed
  - Store Rails cache data in the Redis `cache:gitlab` namespace

v 6.7.3
  - Fix the merge notification email not being sent (Pierre de La Morinerie)
  - Drop all tables before restoring a Postgres backup
  - Remove yanked modernizr gem

v 6.7.2
  - Fix upgrader script

v 6.7.1
  - Fix GitLab CI integration

v 6.7.0
  - Increased the example Nginx client_max_body_size from 5MB to 20MB, consider updating it manually on existing installations
  - Add support for Gemnasium as a Project Service (Olivier Gonzalez)
  - Add edit file button to MergeRequest diff
  - Public groups (Jason Hollingsworth)
  - Cleaner headers in Notification Emails (Pierre de La Morinerie)
  - Blob and tree gfm links to anchors work
  - Piwik Integration (Sebastian Winkler)
  - Show contribution guide link for new issue form (Jeroen van Baarsen)
  - Fix CI status for merge requests from fork 
  - Added option to remove issue assignee on project issue page and issue edit page (Jason Blanchard)
  - New page load indicator that includes a spinner that scrolls with the page
  - Converted all the help sections into markdown
  - LDAP user filters
  - Streamline the content of notification emails (Pierre de La Morinerie)
  - Fixes a bug with group member administration (Matt DeTullio)
  - Sort tag names using VersionSorter (Robert Speicher)
  - Add GFM autocompletion for MergeRequests (Robert Speicher)
  - Add webhook when a new tag is pushed (Jeroen van Baarsen)
  - Add button for toggling inline comments in diff view
  - Add retry feature for repository import
  - Reuse the GitLab LDAP connection within each request